# mda-dashboard-precificacao

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  app_bp.py  main.py  pyproject.toml
dados/: precificacao_al.qmd
data/raw/: precificacao_al.geojson  precificacao_al_ii.geojson
notebooks/: debug.ipynb
src/mda_app/: app.py
src/mda_app/components/: ui_components.py  visualizations.py
src/mda_app/config/: settings.py
src/mda_app/core/: data_loader.py
src/mda_app/utils/: formatters.py
tests/: test_data_loader.py  test_utils.py
